tests/fixtures/invalid/none_mod_bytes.py
# Cannot modulo None and Bytes
x: None = None % b"hello"
